horizontal feed component updates

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,8 @@
         rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,900"
         rel="stylesheet">
+  <link rel="stylesheet"
+        href="https://unpkg.com/flickity@2/dist/flickity.min.css">
   <title>STV</title>
 </head>
 
@@ -36,6 +38,7 @@
   </noscript>
   <div id="app"></div>
   <!-- built files will be auto injected -->
+
 </body>
 
 </html>
