--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+  <script src="https://unpkg.com/marked@0.3.6"></script>
+  <script src="https://unpkg.com/lodash@4.16.0"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async
           src="https://www.googletagmanager.com/gtag/js?id=UA-70051806-11"></script>
