--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
         rel="stylesheet">
   <link rel="stylesheet"
         href="https://unpkg.com/flickity@2/dist/flickity.min.css">
-  <title>STV</title>
+  <title>Vuetify Template</title>
 </head>
 
 <body>
